modify the tasks

--- a/项目内容.md
+++ b/项目内容.md
@@ -244,4 +244,77 @@
 
 
 ### 4.业务逻辑
+**管理员**
+
+1. 登录
+通过用户名密码登录
+2. 管理
+- 新生管理
+  Excel操作（导入导出）
+  添加录取新生：上传新生的考号/姓名/...
+  添加学校信息：上传专业/院系的名称、代码 
+  添加分班信息：上传学号/班级...
+  添加学校宿舍信息：每一个公寓在哪，环境咋样，文字介绍...
+  添加宿舍信息：住在几公寓哪一间...
+  （选）添加班级群、老乡群....
+
+- 管理员管理
+  更新自己的信息：名字（昵称）、密码...
+  超级管理员可以分配其他管理员权限
+
+- 发布通知
+  查看以往通知
+  改/删以往通知
+  发布通知
+  :warning:通知发布有权限管理
+
+- 接车服务
+  发布信息，每个站到学校的路线咋走，文字
+  发布每天站点的接车时间
+  可以导出每天的时间段的人数信息
+
+- 问卷系统
+  发布问卷（确定问卷本身，确定截止时间）
+  结束问卷
+  问卷样式：单行文本，单选，多选，多行文本。
+  问卷属性：实名/匿名；起止时间；是否强制
+  ~~信息的收集/文件上传（excel）~~
+  ~~投放群体~~
+
+- 报到流程
+  静态信息呈现【初步】
+  带有简单交互
+  使用地图api进行更生动的呈现和指示
+
+- 迎新核验
+  在查询页面输入学生的学号，查询；
+  系统呈现学生的信息，包括照片，学号；
+  确定或返回；
+
+**新生**
+
+1. 登录
+
+通过考生号和身份证号登录；
+
+2. 完成存在的信息统计/问卷调查
+
+3. 信息查询
+- 学号 
+  - 学号
+  - 班级
+  - 院系与专业
+  - 班内人员及信息
+  - 班级群信息
+
+- 宿舍
+  - 室友信息
+  - 宿舍位置
+  - 宿舍环境
+
+- 老乡
+  - 老乡信息
+  - 老乡毕业学校
+  - 老乡群信息
+
 
