对前端界面进行修改，基本完成index界面

--- a/项目内容.md
+++ b/项目内容.md
@@ -237,6 +237,19 @@
 
 ### 2.模块设计
 
+#### 新生模块
+
+- 首页
+- 信息查询
+  - 你的信息
+  - 你的班级
+  - 你的宿舍
+  - 你的老乡
+- 到站信息
+- 所有通知
+- 报到流程
+  - 报道说明
+  - 开始报道
 
 
 ### 3.功能设计
@@ -295,11 +308,12 @@
 
 1. 登录
 
-通过考生号和身份证号登录；
+   通过考生号和身份证号登录；
 
 2. 完成存在的信息统计/问卷调查
 
 3. 信息查询
+
 - 学号 
   - 学号
   - 班级
