修改性别sex为gender

--- a/项目内容.md
+++ b/项目内容.md
@@ -116,7 +116,7 @@
 
   ```text
   新生信息表
-  tbl_new_stu_info(id,stu_id,exam_id,name,sex,card_id,dormitory,checked)
+  tbl_new_stu_info(id,stu_id,exam_id,name,gender,card_id,dormitory,checked)
   id(int):id(primary key)
   stu_id(string):学号
   exam_id(string):考号
