--- a/项目分工.md
+++ b/项目分工.md
@@ -54,28 +54,28 @@
 
 - [x] 新生-首页
 
-- [ ] 新生-你的信息
+- [ ] 新生-信息查询-你的信息
   - [ ] 头-显示学号、院系、班级等有用信息
   - [ ] 中-个人信息，包括姓名，证件号等等（照片？）
   - [ ] 中-修改个人信息？/ 报错说明
 
-- [x] 新生-你的班级
+- [x] 新生-信息查询-你的班级
   - [x] 头-显示学号、院系、班号等信息
   - [x] 中-班级同学，包括姓名，学号，男女，籍贯
   - [x] 中-男女比例，男女排名，省份占比信息
 
-- [ ] 新生-你的宿舍
+- [ ] 新生-信息查询-你的宿舍
   - [ ] 头-显示学号、院系、宿舍
   - [ ] 中-宿舍位置，地图显示
   - [ ] 中-室友信息，姓名，床位，专业，籍贯
   - [ ] 中-宿舍介绍
 
-- [ ] 新生-你的老乡
+- [ ] 新生-信息查询-你的老乡
   - [ ] 头-学号，身份证号码，识别地区，毕业学校
   - [ ] 中-老乡信息，姓名，专业，级别，性别，毕业学校
   - [ ] 位置报错（？）
 
-- [ ] 新生- 到站信息
+- [ ] 新生-到站信息
   - [ ] 头-学号、专业、报到时间
   - [ ] 中-card方式，显示每个到达点的信息
   - [ ] 中-接车预约
@@ -84,11 +84,11 @@
   - [ ] 头-学号、专业、消息数
   - [ ] 消息列表，可分页，包括发布时间，是否查看，发布员
 
-- [ ] 新生-报道说明
+- [ ] 新生-报到流程-报道说明
   - [ ] 头-学号、专业、报到时间、报道提示（开始报道？）
   - [ ] 中-流程，文字
 
-- [ ] 新生-开始报道
+- [ ] 新生-报到流程-开始报道
   - [ ] 头-学号、专业、报到时间、报道提示（开始报道？）
   - [ ] 中-报道流程引导模式
 
