提交部分更改

--- a/项目分工.md
+++ b/项目分工.md
@@ -65,14 +65,14 @@
   - [x] 中-男女比例，男女排名，省份占比信息
 
 - [ ] 新生-你的宿舍
-  - [ ] 头-显示学号、院系、宿舍
+  - [x] 头-显示学号、院系、宿舍
   - [ ] 中-宿舍位置，地图显示
-  - [ ] 中-室友信息，姓名，床位，专业，籍贯
-  - [ ] 中-宿舍介绍
+  - [x] 中-室友信息，姓名，床位，专业，籍贯
+  - [x] 中-宿舍介绍
 
-- [ ] 新生-你的老乡
-  - [ ] 头-学号，身份证号码，识别地区，毕业学校
-  - [ ] 中-老乡信息，姓名，专业，级别，性别，毕业学校
+- [x] 新生-你的老乡
+  - [x] 头-学号，身份证号码，识别地区，毕业学校
+  - [x] 中-老乡信息，姓名，专业，级别，性别，毕业学校
   - [ ] 位置报错（？）
 
 - [ ] 新生- 到站信息
