做了一些修改

--- a/项目分工.md
+++ b/项目分工.md
@@ -136,7 +136,7 @@
   - [ ] 中-信息状态
   - [ ] 中-新生名单导入，包括例样式，导入状态（姓名、考号、地区、身份证号）
   - [ ] 中-新生学号导入
-  - [ ] 中-新生
+  - [ ] 中-新生宿舍导入
 - [ ] 管理员-管理员管理
   - [ ] 头-管理员昵称，所属部门
   - [ ] 中-列表-全部管理员信息（可以增删改）-按钮跳转到修改界面
