修改部分文档

--- a/Laravel/使用说明.md
+++ b/Laravel/使用说明.md
@@ -1,8 +1,22 @@
-##  use
+##  如何使用
 
----
+1. 将项目`clone`到本地之后，在laravel文件夹下，执行`composer install`
 
-将项目clone到本地之后，在laravel文件夹下
+2. 修改`.env`文件，将数据库进行配置
 
-composer install
+```php
+DB_CONNECTION=mysql // 可能是别的数据库，具体见Laravel
+DB_HOST=127.0.0.1 	// 数据库地址
+DB_PORT=3306 		// 端口
+DB_DATABASE=数据库名称
+DB_USERNAME=数据库用户名
+DB_PASSWORD=数据库密码
+```
 
+3. 使用`php artisan migrate`自动创建数据表
+4. 如在调试环境下，使用`php artisan db:seed --class=StudentTableSeeder`命令填充假数据。
+5. 启动服务程序，通过`php artisan serve`
+
+
+
+W.H.S.D.T.
