t_enroll_cfg Added
- 添加t_enroll_cfg的数据迁移和填充文件；
- 更新了一些注释和改正错别字；

--- a/后端/tables/数据库.md
+++ b/后端/tables/数据库.md
@@ -124,7 +124,7 @@ db-v1.0
 | pms_post_section     | smallint    |      | 0-无权限，1-有读权限，2-有读写权限 | 通知服务权限控制 |
 |pms_svy_section  |       smallint       ||0-无权限，1-有读权限，2-有读写权限| 问卷系统权限控制 |
 |    pms_shtl_section     |   smallint      ||0-无权限，1-有读权限，2-有读写权限| 接车系统权限控制 |
-| pms_enrl_section   |     smallint      ||0-无权限，1-有读权限，2-有读写权限| 报道流程系统权限控制 |
+| pms_enrl_section   |     smallint      ||0-无权限，1-有读权限，2-有读写权限| 报到流程系统权限控制 |
 | pms_reporting_section| smallint		|||新生核验|
 
 ### t_configuration
@@ -136,7 +136,7 @@ db-v1.0
 | conf_svy_open_ctrl   | boolean |      | true-开启，false-关闭 | 问卷系统控制         |
 | conf_svy_strict_ctrl | boolean |      | true-开启，false-关闭 | 问卷系统强制填写控制 |
 | conf_shtl_open_ctrl  | boolean |      | true-开启，false-关闭 | 接车系统控制         |
-| conf_enrl_open_ctrl  | boolean |      | true-开启，false-关闭 | 报道流程系统控制     |
+| conf_enrl_open_ctrl  | boolean |      | true-开启，false-关闭 | 报到流程系统控制     |
 
 ## 3. 调查问卷
 
@@ -266,14 +266,14 @@ db-v1.0
 | enrl_info     | string/html       |      |           | 报到内容 |
 | enrl_location | object/serialized |      | {x:…,y:…} | 位置信息 |
 
-报道信息配置
+报到信息配置
 
 ### t_enroll_cfg
 | 字段            | 类型    | 约束 | 取值          | 描述                 |
 | --------------- | ------- | ---- | ------------- | -------------------- |
 | id              | int     | PK   |               | 报到id               |
-| enrl_begin_time | string  |      | X月X日        | 报道时间             |
-| enrl_permission | boolean |      | {true, false} | 准许核验（开始报道） |
+| enrl_begin_time | string  |      | X月X日        | 报到时间             |
+| enrl_permission | boolean |      | {true, false} | 准许核验（开始报到） |
 
 改动总览：
 
