- 修改部分bug - 完成新生导入功能

--- a/后端/tables/数据库.md
+++ b/后端/tables/数据库.md
@@ -18,7 +18,7 @@ db-v1.0
 | stu_eid          | char(14)    |       |                                                              | 高考全国统一考号，14位                                       |
 | 【废弃】dept_id  | int         |       |                                                              | 学生所属学院id                                               |
 | 【废弃】major_id | int         |       |                                                              | 学生所属专业id                                               |
-| class_id         | int         |       |                                                              | 学生所属班级id                                               |
+| 【废弃】class_id | int         |       |                                                              | 学生所属班级id                                               |
 | stu_dorm_str     | varchar(10) |       | 按照x-xxx-x记录                                              | 宿舍                                                         |
 | stu_from_school  | varchar(50) |       |                                                              | 毕业学校                                                     |
 
