- 修改部分bug - 增加上传院系信息功能 - 增加显示院系信息功能 - 改善用户使用

--- a/后端/tables/数据库.md
+++ b/后端/tables/数据库.md
@@ -13,7 +13,7 @@ db-v1.0
 | stu_degree       | enum        |       | {UG:本科在读, M:硕士研究生在读, D:博士研究生在读（博士毕业及以上不在此系统管理范围内）} | 身份                                                         |
 | stu_num          | char(10)    |       |                                                              | 学号:入学后不再更改, 年级/专业/班级信息仅供参考：16-040-04-00; |
 | stu_name         | varchar(15) |       |                                                              | 姓名                                                         |
-| stu_gen          | boolean     |       |                                                              | 性别                                                         |
+| stu_gen          | boolean     |       | 0 -男生，1 -女生                                             | 性别                                                         |
 | stu_cid          | char(18)    |       |                                                              | 身份证号,18位                                                |
 | stu_eid          | char(14)    |       |                                                              | 高考全国统一考号，14位                                       |
 | 【废弃】dept_id  | int         |       |                                                              | 学生所属学院id                                               |
