修改数据库文件

--- a/后端/tables/数据库.md
+++ b/后端/tables/数据库.md
@@ -40,7 +40,7 @@ db-v1.0
 
 | 字段      | 类型        | 约束     | 取值 | 描述     |
 | --------- | ----------- | -------- | ---- | -------- |
-| id        | int         | PK，AI   |      | 学院id   |
+| id        | int         | PK，AI   |      | id       |
 | dept_name | varchar(30) | not null |      | 学院名称 |
 
 ### t_major
@@ -271,7 +271,7 @@ db-v1.0
 ### t_enroll_cfg
 | 字段            | 类型    | 约束 | 取值          | 描述                 |
 | --------------- | ------- | ---- | ------------- | -------------------- |
-| id              | int     | PK   |               | 报到id               |
+| id              | int     | PK   |               | id                   |
 | enrl_begin_time | string  |      | X月X日        | 报道时间             |
 | enrl_permission | boolean |      | {true, false} | 准许核验（开始报道） |
 
