- 增加学校简介 - 增加院系信息 - 修复bug - 更改了部分表格信息

--- a/后端/tables/数据库.md
+++ b/后端/tables/数据库.md
@@ -66,13 +66,14 @@ db-v1.0
 
 ### t_dormitory
 
-| 字段            | 类型       | 约束 | 取值 | 描述 |
-| --------------- | ---------- | ---- | ---- | ---- |
-| id              |            |      |      |      |
-| dorm_name       | varchar(8) |      |      |      |
-| dorm_position_x | double     |      |      |      |
-| dorm_position_y | double     |      |      |      |
-| dorm_desc       | text       |      |      |      |
+| 字段            | 类型       | 约束 | 取值 | 描述     |
+| --------------- | ---------- | ---- | ---- | -------- |
+| id              | int        |      |      | 唯一id   |
+|dorm_tag|varchar(6)||1~12 留|公寓标志，用于连表|
+| dorm_name       | varchar(8) |      |      | 公寓名称 |
+| dorm_position_x | double     |      |      | 经纬度   |
+| dorm_position_y | double     |      |      | 经纬度   |
+| dorm_desc       | text       |      | html | 公寓介绍 |
 
 
 
@@ -275,6 +276,7 @@ db-v1.0
 | id              | int     | PK   |               | id                   |
 | enrl_begin_time | string  |      | X月X日        | 报道时间             |
 | enrl_permission | boolean |      | {true, false} | 准许核验（开始报道） |
+|school_info|text|      |html|学校简介|
 
 改动总览：
 
