修改了一部分业务逻辑 - 增加了数据库错误回滚操作 - 定义数据库类型为InnoDB，可以回滚操作 - 增加了查看院系新生的功能

--- a/后端/tables/数据库.md
+++ b/后端/tables/数据库.md
@@ -9,7 +9,7 @@ db-v1.0
 | 字段             | 类型        | 约束  | 取值                                                         | 描述                                                         |
 | ---------------- | ----------- | ----- | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | id               | int         | PK,AI |                                                              | 主键                                                         |
-| stu_status       | enum        |       | {PRE:待入学, ENROLLING:正入学, CURRENT:在读, FINISH:毕业, OTHER:其他} | 学生状态                                                     |
+| stu_status       | enum        |       | {PREPARE:待入学, ENROLLING:正入学, CURRENT:在读, FINISH:毕业, OTHER:其他} | 学生状态                                                     |
 | stu_degree       | enum        |       | {UG:本科在读, M:硕士研究生在读, D:博士研究生在读（博士毕业及以上不在此系统管理范围内）} | 身份                                                         |
 | stu_num          | char(10)    |       |                                                              | 学号:入学后不再更改, 年级/专业/班级信息仅供参考：16-040-04-00; |
 | stu_name         | varchar(15) |       |                                                              | 姓名                                                         |
