Revert "feat(到站信息) & style(所有通知)"

--- a/后端/tables/数据库.md
+++ b/后端/tables/数据库.md
@@ -227,7 +227,6 @@ db-v1.0
 
 ### t_shuttle
 
-注：相关管理员根据学校实际情况将开放的接车服务信息放到这里
 |字段        |类型   |     约束   |     取值      |  描述|
 |------------------------------------------------|-----------------------------|-----------------------------|-----------------------------|-----------------------------|
 |id|int|PK|||
@@ -251,7 +250,7 @@ db-v1.0
 | 字段        | 类型   | 约束 | 取值 | 描述       |
 | ----------- | ------ | ---- | ---- | ---------- |
 | id          | int    | PK   |      | id         |
-| port_id     | int    | FK   |      | 枢纽点id   |
+| shtl_id     | int    | FK   |      | 枢纽点id   |
 | stu_id      | string | FK   |      | 新生id     |
 | record_time | string |      |      | 大致时间点 |
 
