修改“老生”到“在校生” - 解决issue #26

--- a/后端/tables/数据库.md
+++ b/后端/tables/数据库.md
@@ -281,6 +281,6 @@ db-v1.0
 
 改动总览：
 
-- 新生和老生的数据表合并为stu表，新老生通过字段上层逻辑实现区分
+- 新生和在校生的数据表合并为stu表，新在校生通过字段上层逻辑实现区分
 - 表名缩写尽量采取3~4个字母，关系模式的字段前缀体现其所属
 - 增加表t_enroll_cfg，对录取工作量化
