--- a/项目内容.md
+++ b/项目内容.md
@@ -112,7 +112,7 @@
 
 - 学生数据数据库
 
-  此数据库存放学生信息，包括新生信息和老生信息。
+  此数据库存放学生信息，包括新生信息和在校生信息。
 
   ```text
   新生信息表
@@ -128,13 +128,13 @@
   > 注：院系、专业、班级通过stu_id截取实现
   ```
   ```text
-  老生信息表
+  在校生信息表
   tbl_stu_info(id,stu_id,name,card_id)
   id(int):id(primary key)
   stu_id(string):学号
   name(string):姓名
   card_id(string):身份证号码
-  > 注：根据GDPR精神，只保留在校老生信息，并且去除不必要的信息。
+  > 注：根据GDPR精神，只保留在校在校生信息，并且去除不必要的信息。
   ```
   ```text
   省市信息表
