--- a/项目分工.md
+++ b/项目分工.md
@@ -104,15 +104,15 @@
 
     
 
-#### 老生
+#### 在校生
 
-- [ ] 老生-首页
+- [ ] 在校生-首页
   - [ ] 头-学号，姓名
   - [ ] 中-card，老乡查询，信息通知展示
-- [ ] 老生-老乡查询
+- [ ] 在校生-老乡查询
   - [ ] 头-姓名，身份证号
   - [ ] 中-老乡信息，姓名，专业，性别，毕业学校
-- [ ] 老生-所有通知
+- [ ] 在校生-所有通知
   - [ ] 头-姓名，通知数量
   - [ ] 中-通知
 
@@ -132,7 +132,7 @@
   - [ ] 中-列表-专业信息（专业号码对应院系，介绍…）-按钮跳转到修改界面
   - [ ] 中-列表-公寓信息（地图位置，介绍….）-按钮跳转到修改界面
 - [ ] 管理员-新生管理
-  - [ ] 头-管理员昵称，所属部门，新生总人数，老生总人数
+  - [ ] 头-管理员昵称，所属部门，新生总人数，在校生总人数
   - [ ] 中-信息状态
   - [ ] 中-新生名单导入，包括例样式，导入状态（姓名、考号、地区、身份证号）
   - [ ] 中-新生学号导入
