完成通知展示逻辑 - 点击通知后会跳转页面，并记录浏览 - 创建相应的链接

--- a/后端/tables/数据库.md
+++ b/后端/tables/数据库.md
@@ -213,9 +213,10 @@ db-v1.0
 ### t_post_read 
 
 | 字段    |    类型       | 约束    |    取值 |       描述|
-|----------------------------------|--------------------------------------------|
-|id        |  int |    PK|
-| read_timestamp  |timestamp|||	时间戳|
+|----------------------------------|--------------------------------------------|----------------------------------|----------------------------------|----------------------------------|
+|id        |  int |    PK|||
+| created_at |timestamp||自动创建|	时间戳|
+| updated_at |timestamp||自动创建| 时间戳 |
 |  post_id|	int  			|||	通知ID|
 |  stu_id 	|	int			|||	学生ID|
 
