填写数据表

--- a/后端/tables/数据库.md
+++ b/后端/tables/数据库.md
@@ -1,38 +1,26 @@
 # 数据库定义
 
-db-v1.0
+db-v1.3
 
 ## 1. 学生信息
 
 ### t_student 
 
-| 字段             | 类型        | 约束   | 取值                                                         | 描述                                                         |
-| ---------------- | ----------- | ------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| id               | int         | PK,AI  |                                                              | 主键                                                         |
-| stu_status       | enum        |        | {PREPARE:待入学, ENROLLING:正入学, CURRENT:在读, FINISH:毕业, OTHER:其他} | 学生状态                                                     |
-| stu_degree       | enum        |        | {UG:本科在读, M:硕士研究生在读, D:博士研究生在读（博士毕业及以上不在此系统管理范围内）} | 身份                                                         |
-| stu_num          | char(10)    | unique |                                                              | 学号:入学后不再更改, 年级/专业/班级信息仅供参考：16-040-04-00; |
-| stu_name         | varchar(15) |        |                                                              | 姓名                                                         |
-| stu_gen          | boolean     |        | 0 -男生，1 -女生                                             | 性别                                                         |
-| stu_cid          | char(18)    | unique |                                                              | 身份证号,18位                                                |
-| stu_eid          | char(14)    | unique |                                                              | 高考全国统一考号，14位                                       |
-| 【废弃】dept_id  | int         |        |                                                              | 学生所属学院id                                               |
-| 【废弃】major_id | int         |        |                                                              | 学生所属专业id                                               |
-| 【废弃】class_id | int         |        |                                                              | 学生所属班级id                                               |
-| stu_dorm_str     | varchar(10) | unique | 按照x-xxx-x记录                                              | 宿舍                                                         |
-| stu_from_school  | varchar(50) |        |                                                              | 毕业学校                                                     |
-
-注：
-
-- 学生表暂时先冗余着，以后根据需要决定是否分表；
-
-- 添加了学生状态和身份字段后，不再需要标志是否报到的checked_flag；
-
-- 学生的院系、专业、班级首次录入根据学号确定，日后可以更改；
-
-- 学生的省、市信息首次录入根据身份证号确定，但可能会支持学生自定义省市查询同乡；
-
-- 系统暂时没有涉及高中毕业学校；
+| 字段            | 类型        | 约束            | 取值                                                         | 描述                   |
+| --------------- | ----------- | --------------- | ------------------------------------------------------------ | ---------------------- |
+| id              | int         | PK,AI           |                                                              | 主键                   |
+| stu_status      | enum        | ENUM            | {PREPARE:待入学, ENROLLING:正入学, CURRENT:在读, FINISH:毕业, OTHER:其他} | 学生状态               |
+| stu_degree      | enum        | ENUM            | {UG:本科在读, M:硕士研究生在读, D:博士研究生在读（博士毕业及以上不在此系统管理范围内）} | 身份                   |
+| stu_num         | char(10)    | unique          | 入学后不再更改, 年级/专业/班级信息仅供参考：16-040-04-00;    | 学号                   |
+| stu_name        | varchar(15) | not null        | <15                                                          | 姓名                   |
+| stu_gen         | boolean     | not null        | 0 -男生，1 -女生                                             | 性别                   |
+| stu_cid         | char(18)    | unique,not null |                                                              | 身份证号,18位          |
+| stu_eid         | char(14)    | unique,not null |                                                              | 高考全国统一考号，14位 |
+| 【虚拟列】dept  | char(4)     |                 | 通过学号产生                                                 | 学生所属学院           |
+| 【虚拟列】major | char(4)     |                 | 通过学号产生                                                 | 学生所属专业           |
+| 【虚拟列】class | char(3)     |                 | 通过学号产生                                                 | 学生所属班级           |
+| stu_dorm_str    | varchar(10) | unique          | 按照x-xxx-x记录                                              | 宿舍                   |
+| stu_from_school | varchar(50) |                 |                                                              | 毕业学校               |
 
 
 
@@ -43,37 +31,29 @@ db-v1.0
 | id        | int         | PK，AI   |      | id       |
 | dept_name | varchar(30) | not null |      | 学院名称 |
 
+
+
 ### t_major
 
 | 字段       | 类型         | 约束   | 取值            | 描述       |
 | ---------- | ------------ | ------ | --------------- | ---------- |
 | id         | int          | PK, AI | not null        | 学院id     |
-| major_num  | varchar(3)   |        |                 | 专业号码   |
+| major_num  | varchar(3)   | unique |                 | 专业号码   |
 | major_name | varchar(30)  |        |                 | 专业名称   |
 | dept_id    | int unsigned | FK     | t_department.id | 所属学院id |
 
 
 
-### t_class【暂时不用】
-
-| 字段      | 类型         | 约束   | 取值 | 描述 |
-| --------- | ------------ | ------ | ---- | ---- |
-| id        | int          | PK, AI |      |      |
-| class_num | varchar(8)   |        |      |      |
-| major_id  | int unsigned |        |      |      |
-
-
-
 ### t_dormitory
 
-| 字段            | 类型       | 约束 | 取值 | 描述     |
-| --------------- | ---------- | ---- | ---- | -------- |
-| id              | int        | PK |      | 唯一id   |
-|dorm_tag|varchar(6)|unique|1~12 留|公寓标志，用于连表|
-| dorm_name       | varchar(8) |      |      | 公寓名称 |
-| dorm_position_x | double     |      |      | 经纬度   |
-| dorm_position_y | double     |      |      | 经纬度   |
-| dorm_desc       | text       |      | html | 公寓介绍 |
+| 字段            | 类型       | 约束     | 取值    | 描述               |
+| --------------- | ---------- | -------- | ------- | ------------------ |
+| id              | int        | PK       |         | 唯一id             |
+| dorm_tag        | varchar(6) | unique   | 1~12 留 | 公寓标志，用于连表 |
+| dorm_name       | varchar(8) | not null | <8      | 公寓名称           |
+| dorm_position_x | double     | not null |         | 经纬度             |
+| dorm_position_y | double     | not null |         | 经纬度             |
+| dorm_desc       | MEDIUMTEXT |          | html    | 公寓介绍           |
 
 
 
@@ -99,45 +79,58 @@ db-v1.0
 
 
 
+### t_student_info
+| 字段       | 类型        | 约束   | 取值         | 描述     |
+| ---------- | ----------- | ------ | ------------ | -------- |
+| id         | int         | PK,AI  |              |          |
+| student_id | int         | unique | t_student.id | 学生ID   |
+| home_addr  | text        |        |              | 家庭住址 |
+| phone_num  | varchar(15) |        |              | 联系号码 |
+| relate     | string      |        |              | 团关系   |
+| nation     | varchar(10) |        |              | 民族     |
+| party      | string      |        |              | 政治面貌 |
+
+### t_student_help
+
+| 字段        | 类型 | 约束   | 取值                       | 描述     |
+| ----------- | ---- | ------ | -------------------------- | -------- |
+| id          | int  | PK,AI  |                            |          |
+| student_id  | int  | unique | t_student.id               | 学生ID   |
+| verify      | int  |        | 0-未审核；1-通过；2-未通过 | 审核信息 |
+| verify_info | text |        |                            | 联系号码 |
+| files       | json |        | json数组                   | 证明文件 |
+
 
 
 ## 2. 管理员
 
 ### t_admin
 
-|   字段    |    类型   |     约束       |取值     |   描述|
-|--|-|-|-|-|
-|   id     |     int   |  PK,AI|||
-|adm_name    |    varchar(15)|||用户名|
-| adm_password|    varchar(30) （md5）|||密码|
-|  pms_id       | int unsigned |FK||权限id|
+| 字段         | 类型                | 约束   | 取值                         | 描述           |
+| ------------ | ------------------- | ------ | ---------------------------- | -------------- |
+| id           | int                 | PK,AI  |                              |                |
+| adm_name     | varchar(15)         | unique | <15                          | 用户名         |
+| adm_password | varchar(30) （md5） |        |                              | 密码           |
+| pms_id       | int unsigned        | FK     | t_permission.id              | 权限id         |
+| dept_id      | int                 |        | 0-不区分；<100- 院系，对应id | 管理员所属院系 |
 
 
 
 ### t_permission
 
-| 字段                 | 类型        | 约束 | 取值 | 描述                                                 |
-| -------------------- | ----------- | ---- | ---- | ---------------------------------------------------- |
-| id                   | int         | PK   |      |                                                      |
-| pms_name             | varchar(30) |      |      | 权限名称                                             |
-| pms_base_section     | smallint    |      | 0-无权限，1-有权限 | 基础权限控制（系统管理权限）     |
-| pms_stu_info_section | smallint    |      | 0-无权限，1-有读权限，2-有读写权限 | 学生信息权限控制 |
-| pms_post_section     | smallint    |      | 0-无权限，1-有读权限，2-有读写权限 | 通知服务权限控制 |
-|pms_svy_section  |       smallint       ||0-无权限，1-有读权限，2-有读写权限| 问卷系统权限控制 |
-|    pms_shtl_section     |   smallint      ||0-无权限，1-有读权限，2-有读写权限| 接车系统权限控制 |
-| pms_enrl_section   |     smallint      ||0-无权限，1-有读权限，2-有读写权限| 报到流程系统权限控制 |
-| pms_reporting_section| smallint		|||新生核验|
+| 字段                  | 类型     | 约束 | 取值                                             | 描述                         |
+| --------------------- | -------- | ---- | ------------------------------------------------ | ---------------------------- |
+| id                    | int      | PK   |                                                  |                              |
+| pms_base_section      | smallint | ENUM | 0-无权限，1-有权限                               | 基础权限控制（系统管理权限） |
+| pms_admin_section     | smallint | ENUM | 0-无权限，1-有权限                               | 管理员管理权限               |
+| pms_stu_info_section  | smallint | ENUM | 0-无权限，1-有读权限，2-有读写权限               | 学生信息权限控制             |
+| pms_post_section      | smallint | ENUM | 0-无权限，1-有读、发布院系通知权限，2-有读写权限 | 通知服务权限控制             |
+| pms_svy_section       | smallint | ENUM | 0-无权限，1-有读权限，2-有读写权限               | 问卷系统权限控制             |
+| pms_shtl_section      | smallint | ENUM | 0-无权限，1-有读权限，2-有读写权限               | 接车系统权限控制             |
+| pms_enrl_section      | smallint | ENUM | 0-无权限，1-有读权限，2-有读写权限               | 报到流程系统权限控制         |
+| pms_reporting_section | smallint | ENUM | 0-无权限，1-有读权限                             | 新生核验                     |
 
-### t_configuration
 
-| 字段                 | 类型    | 约束 | 取值                  | 描述                 |
-| -------------------- | ------- | ---- | --------------------- | -------------------- |
-| id                   | int     | PK   |                       |                      |
-| conf_open_ctrl       | boolean |      | true-开启，false-关闭 | 系统开启控制         |
-| conf_svy_open_ctrl   | boolean |      | true-开启，false-关闭 | 问卷系统控制         |
-| conf_svy_strict_ctrl | boolean |      | true-开启，false-关闭 | 问卷系统强制填写控制 |
-| conf_shtl_open_ctrl  | boolean |      | true-开启，false-关闭 | 接车系统控制         |
-| conf_enrl_open_ctrl  | boolean |      | true-开启，false-关闭 | 报到流程系统控制     |
 
 ## 3. 调查问卷
 
@@ -206,9 +199,11 @@ db-v1.0
 | -------------- | ------------ | ---- | --------------------------------------------------------- | -------- |
 | id             | int          | PK   |                                                           |          |
 | post_timestamp | timestamp    |      |                                                           | 时间戳   |
-| post_title     | varchar(100) |      |                                                           | 通知标题 |
-| post_content   | text         |      |                                                           | 通知内容 |
+| post_title     | varchar(100) |      | <100                                                      | 通知标题 |
+| post_content   | MEDIUMTEXT   |      | <16MB                                                     | 通知内容 |
 | post_send_to   | int          |      | 0-全体；<100- 院系，对应id；>100- 专业，对应院系id+专业id | 发送对象 |
+
+
 
 ### t_post_read 
 
@@ -217,8 +212,9 @@ db-v1.0
 |id        |  int |    PK|||
 | created_at |timestamp||自动创建|	时间戳|
 | updated_at |timestamp||自动创建| 时间戳 |
-|  post_id|	int  			|FK||	通知ID|
-|  stu_id 	|	int			|FK||	学生ID|
+|  post_id|	int  			|FK|t_post.id|	通知ID|
+|  stu_id 	| int       |FK|t_student.id|	学生ID|
+
 
 
 ## 5. 接车服务
@@ -232,28 +228,32 @@ db-v1.0
 |------------------------------------------------|-----------------------------|-----------------------------|-----------------------------|-----------------------------|
 |id|int|PK|||
 |  port_id|int|FK||枢纽点id|
-|  shtl_time|string||使用\|区分时间点|大致时间点|
+|  shtl_time|json|| json数组 |大致时间点|
+
+- shtl_time格式为：{\[timestamp\],\[timestamp\]}
 
 交通枢纽点
 
 ### t_shtl_port
 
-| 字段      | 类型        | 约束 | 取值 | 描述                 |
-| --------- | ----------- | ---- | ---- | -------------------- |
-| id        | int         | PK   |      | 交通枢纽点           |
-| port_name | varchar(50) |      |      | 枢纽点名称           |
-| port_info | text        |      |      | 枢纽点介绍及到校攻略 |
+| 字段      | 类型        | 约束     | 取值  | 描述                 |
+| --------- | ----------- | -------- | ----- | -------------------- |
+| id        | int         | PK       |       | 交通枢纽点           |
+| port_name | varchar(50) | not null | <50   | 枢纽点名称           |
+| port_info | MEDIUMTEXT  |          | <16MB | 枢纽点介绍及到校攻略 |
 
 接车服务信息统计
 
 ### t_shtl_record
 
-| 字段        | 类型   | 约束 | 取值 | 描述       |
-| ----------- | ------ | ---- | ---- | ---------- |
-| id          | int    | PK   |      | id         |
-| shtl_id     | int    | FK   |      | 枢纽点id   |
-| stu_id      | string | FK   |      | 新生id     |
-| record_time | string |      |      | 大致时间点 |
+| 字段        | 类型      | 约束 | 取值           | 描述       |
+| ----------- | --------- | ---- | -------------- | ---------- |
+| id          | int       | PK   |                | id         |
+| shtl_id     | int       | FK   | t_shtl_port.id | 枢纽点id   |
+| stu_id      | string    | FK   | t_student.id   | 新生id     |
+| record_time | timestamp |      |                | 大致时间点 |
+
+
 
 ## 6. 报到流程
 
@@ -261,12 +261,14 @@ db-v1.0
 
 ### t_enroll
 
-| 字段          | 类型              | 约束 | 取值      | 描述     |
-| ------------- | ----------------- | ---- | --------- | -------- |
-| id            | int               | PK   |           | 报到id   |
-| enrl_title    | string            |      |           | 标题     |
-| enrl_info     | string/html       |      |           | 报到内容 |
-| enrl_location | object/serialized |      | {x:…,y:…} | 位置信息 |
+| 字段          | 类型            | 约束 | 取值      | 描述         |
+| ------------- | --------------- | ---- | --------- | ------------ |
+| id            | int             | PK   |           | 报到id       |
+| enrl_title    | string          |      |           | 标题         |
+| enrl_info     | MEDIUMTEXT/html |      |           | 报到内容     |
+| enrl_location | json            |      | {x:…,y:…} | 位置信息     |
+| enrl_rank     | int             |      |           | 报道顺序信息 |
+
 
 报到信息配置
 
@@ -277,10 +279,36 @@ db-v1.0
 | id              | int     | PK   |               | id                   |
 | enrl_begin_time | string  |      | X月X日        | 报道时间             |
 | enrl_permission | boolean |      | {true, false} | 准许核验（开始报道） |
-|school_info|text|      |html|学校简介|
+| enrl_info | MEDIUMTEXT | | html | 报道说明 |
+
+
+
+## 7. 系统配置
+
+### t_configuration
+
+| 字段                 | 类型    | 约束 | 取值                  | 描述                 |
+| -------------------- | ------- | ---- | --------------------- | -------------------- |
+| id                   | int     | PK   |                       |                      |
+| conf_open_ctrl       | boolean |      | true-开启，false-关闭 | 系统开启控制         |
+| conf_svy_open_ctrl   | boolean |      | true-开启，false-关闭 | 问卷系统控制         |
+| conf_svy_strict_ctrl | boolean |      | true-开启，false-关闭 | 问卷系统强制填写控制 |
+| conf_shtl_open_ctrl  | boolean |      | true-开启，false-关闭 | 接车系统控制         |
+| conf_enrl_open_ctrl  | boolean |      | true-开启，false-关闭 | 报到流程系统控制     |
+
+
+
+### t_sys_info
+| 字段        | 类型       | 约束 | 取值 | 描述     |
+| ----------- | ---------- | ---- | ---- | -------- |
+| id          | int        | PK   |      |          |
+| school_info | MEDIUMTEXT |      | html | 学校简介 |
+
+
 
 改动总览：
 
 - 新生和在校生的数据表合并为stu表，新在校生通过字段上层逻辑实现区分
 - 表名缩写尽量采取3~4个字母，关系模式的字段前缀体现其所属
 - 增加表t_enroll_cfg，对录取工作量化
+
