部分完成管理员权限、迎新流程、迎新核验 - 管理员权限     - 完成管理员添加、权限分配、修改     - 可能还要完成系统对权限的运用 - 迎新流程以及迎新公告     - 完成流程的增删改查     - 完成公告信息的改查     - 完成迎新系统设置，包括时间和是否开始核验     - 新生可以查看迎新的流程信息、公告信息     - 可能还要完成宿舍的区域的引导 - 迎新核验     - 核验部分完成查找和核验     - 集成了所有的信息

--- a/后端/tables/数据库.md
+++ b/后端/tables/数据库.md
@@ -121,6 +121,7 @@ db-v1.3
 | 字段                  | 类型     | 约束 | 取值                                             | 描述                         |
 | --------------------- | -------- | ---- | ------------------------------------------------ | ---------------------------- |
 | id                    | int      | PK   |                                                  |                              |
+| pms_name              | string   |      |                                                  | 权限名称                     |
 | pms_base_section      | smallint | ENUM | 0-无权限，1-有权限                               | 基础权限控制（系统管理权限） |
 | pms_admin_section     | smallint | ENUM | 0-无权限，1-有权限                               | 管理员管理权限               |
 | pms_stu_info_section  | smallint | ENUM | 0-无权限，1-有读权限，2-有读写权限               | 学生信息权限控制             |
@@ -129,6 +130,7 @@ db-v1.3
 | pms_shtl_section      | smallint | ENUM | 0-无权限，1-有读权限，2-有读写权限               | 接车系统权限控制             |
 | pms_enrl_section      | smallint | ENUM | 0-无权限，1-有读权限，2-有读写权限               | 报到流程系统权限控制         |
 | pms_reporting_section | smallint | ENUM | 0-无权限，1-有读权限                             | 新生核验                     |
+| pms_help_verify       | smallint | ENUM | 0-无权限，1-有权限                               | 助学贷款                     |
 
 
 
@@ -261,13 +263,13 @@ db-v1.3
 
 ### t_enroll
 
-| 字段          | 类型            | 约束 | 取值      | 描述         |
-| ------------- | --------------- | ---- | --------- | ------------ |
-| id            | int             | PK   |           | 报到id       |
-| enrl_title    | string          |      |           | 标题         |
-| enrl_info     | MEDIUMTEXT/html |      |           | 报到内容     |
-| enrl_location | json            |      | {x:…,y:…} | 位置信息     |
-| enrl_rank     | int             |      |           | 报道顺序信息 |
+| 字段          | 类型            | 约束 | 取值  | 描述         |
+| ------------- | --------------- | ---- | ----- | ------------ |
+| id            | int             | PK   |       | 报到id       |
+| enrl_title    | string          |      |       | 标题         |
+| enrl_info     | MEDIUMTEXT/html |      |       | 报到内容     |
+| enrl_location | json            |      | [x,y] | 位置信息     |
+| enrl_rank     | int             |      |       | 报道顺序信息 |
 
 
 报到信息配置
