--- a/已使用开源库.md
+++ b/已使用开源库.md
@@ -1,16 +1,11 @@
 # 已使用开源库
 
 1. Laravel
-
 2. Bootstrap
-
 3. SB admin
-
 4. SmallPop
-
 5. Laravel-Excel
-
 6. sweetalert2
-
 7. Awesome Bootstrap Checkbox
+8. bootstrap-datetimepicker
 
