完成了绿色通道部分 - 完成绿色通道部分 - 研究了文件上传和bootstrap-fileuploader用法 - 修改了一些bug

--- a/后端/tables/数据库.md
+++ b/后端/tables/数据库.md
@@ -97,7 +97,7 @@ db-v1.3
 | id          | int  | PK,AI  |                            |          |
 | student_id  | int  | unique | t_student.id               | 学生ID   |
 | verify      | int  |        | 0-未审核；1-通过；2-未通过 | 审核信息 |
-| verify_info | text |        |                            | 联系号码 |
+| verify_info | text |        |                            | 审核结果 |
 | files       | json |        | json数组                   | 证明文件 |
 
 
