完成了接车服务的管理员部分 - 还未完成导出功能

--- a/后端/tables/数据库.md
+++ b/后端/tables/数据库.md
@@ -230,9 +230,7 @@ db-v1.3
 |------------------------------------------------|-----------------------------|-----------------------------|-----------------------------|-----------------------------|
 |id|int|PK|||
 |  port_id|int|FK|t_shtl_port.id|枢纽点id|
-|  shtl_time|json|| json数组 |大致时间点|
-
-- shtl_time格式为：{\[timestamp\],\[timestamp\]}
+|  shtl_time|json|| [t1,t2] |大致时间点|
 
 交通枢纽点
 
